tests/api/reference/negative/14-match-pattern-type.asm
const invalid: map = match.tokens(42, "name")
